# WoMAD

./: .gitignore  404.html  LICENSE  Makefile  README.md  WoMAD-main.py  WoMAD_main.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml  utils.py
.github/workflows/: main.yml
WoMAD/: WoMAD-config.py  WoMAD_config.py  WoMAD_development.ipynb  __init__.py  data-module.py  data_module.py  hyperparameter-module.py  hyperparameter_module.py  model-setup-module.py  model-train-module.py  model-valid-module.py  model_setup_module.py  model_train_module.py  model_valid_module.py  result-interp-module.py  result_interp_module.py  womad_development.py
data/: full_3T_task_subjects.txt
docs/: getting-started.md  index.md  methods.md  the-code.md  the-science.md  the_code.md  the_science.md
docs/logs/: index.md  upcoming.md
logs/: index.html
logs/upcoming/: index.html
notebooks/: 00_global_utilities.ipynb  01_exploratory_data_analysis.ipynb  02_data_preprocessing.ipynb  03_model_setup_and_training.ipynb  04_model_evaluation.ipynb  05_results_and_interpretation.ipynb
search/: search_index.json
tests/: test-all-modules.py  test_all_modules.py
the-code/: index.html
the-science/: index.html
the_code/: index.html
the_science/: index.html
