[tool.poetry]
name = "Working Memory Architecture and Demand (WoMAD) Model"
version = "0.1.2"
description = "[Brief description]"
authors = [
    "Saameh Sanaaee <saameh.sanaaee@neuromatchacademy.org>",
    "Baitong Mu <email TBD! :)>"
]
license = "CC-BY-4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
nilearn = "*"
nibabel = "*"
brainspace = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
torch = "*"
torch-geometric = "*"
scipy = "*"
rich = ">=13.5.2"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-simple-blog = "*"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
