[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Working Memory Architecture and Demand (WoMAD) Model"
version = "0.1.3"
description = "[Brief description]"
requires-python = ">=3.9"
license = {text = "Creative Commons Attribution 4.0 International (CC BY 4.0)"}
authors = [
    { name = "Saameh Sanaaee", email = "saameh.sanaaee@neuromatchacademy.org" },
    { name = "Baitong Mu", email = "TBD! :)"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "nilearn",
    "nibabel",
    "brainspace",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "torch-geometric",
    "scipy",
    "rich>=13.5.2"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
